--- a/practica bootstrap/index.html
+++ b/practica bootstrap/index.html
@@ -55,13 +55,13 @@
 <div id="carouselExample" class="carousel slide" style="margin-top: 50px; margin: 100px 90px;">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="/assets/img/12.jpg" class="d-block w-100" alt="..." style="height: auto;">
+      <img src="/practica bootstrap/assets/img/12.jpg" class="d-block w-100" alt="..." style="height: auto;">
     </div>
     <div class="carousel-item">
-      <img src="/assets/img/9.jpg" class="d-block w-100" alt="...">
+      <img src="/practica bootstrap/assets/img/9.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="assets/img/7.jpg" class="d-block w-100" alt="..." style="">
+      <img src="/practica bootstrap/assets/img/7.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -85,7 +85,7 @@
           style: redondeo extra y borde sutil → MODIFICACIÓN visual (sobrescribe el estilo base).
         -->
         <div class="card h-100" style="border-radius:16px; overflow:hidden; border:1px solid #e9e9e9;">
-          <img src="/assets/img/6.jpg" class="card-img-top" alt="Tour por el casco histórico" style="object-fit:cover; height:200px;">
+          <img src="/practica bootstrap/assets/img/6.jpg" class="card-img-top" alt="Tour por el casco histórico" style="object-fit:cover; height:200px;">
           <div class="card-body">
             <h5 class="card-title" style="font-weight:700;">Free tour histórico</h5>
             <p class="card-text" style="margin-bottom:12px;">Recorre la Catedral, Archivo de Indias y el Barrio de Santa Cruz con guías locales.</p>
@@ -101,7 +101,7 @@
       <!-- Tarjeta 2 -->
       <div class="col-12 col-md-4">
         <div class="card h-100" style="border-radius:16px; overflow:hidden; border:1px solid #e9e9e9;">
-          <img src="/assets/img/5.jpg" class="card-img-top" alt="Tapeo por Sevilla" style="object-fit:cover; height:200px;">
+          <img src="/practica bootstrap/assets/img/5.jpg" class="card-img-top" alt="Tapeo por Sevilla" style="object-fit:cover; height:200px;">
           <div class="card-body">
             <h5 class="card-title" style="font-weight:700;">Ruta de tapas por Triana</h5>
             <p class="card-text" style="margin-bottom:12px;">Barra a barra: pescaíto, montaditos, salmorejo y postre casero.</p>
@@ -117,7 +117,7 @@
       <!-- Tarjeta 3 -->
       <div class="col-12 col-md-4">
         <div class="card h-100" style="border-radius:16px; overflow:hidden; border:1px solid #e9e9e9;">
-          <img src="/assets/img/11.jpg" class="card-img-top" alt="Show flamenco" style="object-fit:cover; height:200px;">
+          <img src="/practica bootstrap/assets/img/11.jpg" class="card-img-top" alt="Show flamenco" style="object-fit:cover; height:200px;">
           <div class="card-body">
             <h5 class="card-title" style="font-weight:700;">Flamenco íntimo</h5>
             <p class="card-text" style="margin-bottom:12px;">Guitarra, cante y baile en un tablao de aforo reducido. Pura emoción.</p>
@@ -138,49 +138,49 @@
       <!-- 8 imágenes de ejemplo; puedes duplicar o cambiar URLs. -->
       <div class="col-6 col-md-4 col-lg-3">
         <figure class="m-0" style="border-radius:12px; overflow:hidden;">
-          <img src="/assets/img/15.jpg" alt="Plaza con ambiente" class="w-100" style="display:block; object-fit:cover; aspect-ratio:1/1;">
+          <img src="/practica bootstrap/assets/img/15.jpg" alt="Plaza con ambiente" class="w-100" style="display:block; object-fit:cover; aspect-ratio:1/1;">
         </figure>
       </div>
 
       <div class="col-6 col-md-4 col-lg-3">
         <figure class="m-0" style="border-radius:12px; overflow:hidden;">
-          <img src="/assets/img/16.jpg" alt="Callejuela histórica" class="w-100" style="display:block; object-fit:cover; aspect-ratio:1/1;">
+          <img src="/practica bootstrap/assets/img/16.jpg" alt="Callejuela histórica" class="w-100" style="display:block; object-fit:cover; aspect-ratio:1/1;">
         </figure>
       </div>
 
       <div class="col-6 col-md-4 col-lg-3">
         <figure class="m-0" style="border-radius:12px; overflow:hidden;">
-          <img src="/assets/img/13.jpg" alt="Río Guadalquivir" class="w-100" style="display:block; object-fit:cover; aspect-ratio:1/1;">
+          <img src="/practica bootstrap/assets/img/13.jpg" alt="Río Guadalquivir" class="w-100" style="display:block; object-fit:cover; aspect-ratio:1/1;">
         </figure>
       </div>
 
       <div class="col-6 col-md-4 col-lg-3">
         <figure class="m-0" style="border-radius:12px; overflow:hidden;">
-          <img src="/assets/img/14.jpg" alt="Tapas sevillanas" class="w-100" style="display:block; object-fit:cover; aspect-ratio:1/1;">
+          <img src="/practica bootstrap/assets/img/14.jpg" alt="Tapas sevillanas" class="w-100" style="display:block; object-fit:cover; aspect-ratio:1/1;">
         </figure>
       </div>
 
       <div class="col-6 col-md-4 col-lg-3">
         <figure class="m-0" style="border-radius:12px; overflow:hidden;">
-          <img src="/assets/img/17.jpg" alt="Cerámica de Triana" class="w-100" style="display:block; object-fit:cover; aspect-ratio:1/1;">
+          <img src="/practica bootstrap/assets/img/18.jpg" alt="Cerámica de Triana" class="w-100" style="display:block; object-fit:cover; aspect-ratio:1/1;">
         </figure>
       </div>
 
       <div class="col-6 col-md-4 col-lg-3">
         <figure class="m-0" style="border-radius:12px; overflow:hidden;">
-          <img src="/assets/img/18.jpg" alt="Jardines" class="w-100" style="display:block; object-fit:cover; aspect-ratio:1/1;">
+          <img src="/practica bootstrap/assets/img/17.jpg" alt="Jardines" class="w-100" style="display:block; object-fit:cover; aspect-ratio:1/1;">
         </figure>
       </div>
 
       <div class="col-6 col-md-4 col-lg-3">
         <figure class="m-0" style="border-radius:12px; overflow:hidden;">
-          <img src="/assets/img/19.jpg" alt="Tablao flamenco" class="w-100" style="display:block; object-fit:cover; aspect-ratio:1/1;">
+          <img src="/practica bootstrap/assets/img/21.jpg" alt="Tablao flamenco" class="w-100" style="display:block; object-fit:cover; aspect-ratio:1/1;">
         </figure>
       </div>
 
       <div class="col-6 col-md-4 col-lg-3">
         <figure class="m-0" style="border-radius:12px; overflow:hidden;">
-          <img src="/assets/img/20.jpg" alt="Arquitectura andaluza" class="w-100" style="display:block; object-fit:cover; aspect-ratio:1/1;">
+          <img src="/practica bootstrap/assets/img/22.jpg" alt="Arquitectura andaluza" class="w-100" style="display:block; object-fit:cover; aspect-ratio:1/1;">
         </figure>
       </div>
     </div>
@@ -191,5 +191,3 @@
     </body>
 
 </html>
-
-
