--- a/PROYECTO-PAGINA-WEB/paginaprincipal.html
+++ b/PROYECTO-PAGINA-WEB/paginaprincipal.html
@@ -4,18 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sparkly Shop</title>
-    <!-- Fuentes personalizadas primero -->
-<link rel="preconnect" href="/PROYECTO-PAGINA-WEB/assets/css/TwinkleDiamondDEMO.otf">
 
 <!-- Google Fonts -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
-<!-- Bootstrap CSS primero -->
+<!-- Bootstrap CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
-<!-- Tu CSS personalizado después -->
+<!-- CSS -->
 <link rel="stylesheet" href="/PROYECTO-PAGINA-WEB/assets/css/styles.css">
 
 </head>
@@ -112,7 +110,7 @@
         <div class="card" style="width: 18rem;">
             <img src="/PROYECTO-PAGINA-WEB/assets/img/p8.webp" class="card-img-top" alt="...">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Collares</h5>
                 <a href="#" class="btn btn-primary">Ver más</a>
             </div>
         </div>
